--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "bookapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.ts",
+    "start": "vercel dev",
+    "deploy": "vercel deploy --prod"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,10 @@
     "mongoose": "^6.8.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.11",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.3",
+    "vercel": "^28.8.0"
   }
 }
