--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "bookapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon index.ts",
-    "deploy": "vercel deploy --prod"
+    "dev": "nodemon src/index.ts",
+    "postinstall": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,6 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.11",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.3",
-    "vercel": "^28.8.0"
+    "typescript": "^4.9.3"
   }
 }
