--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.11",
+    "git-commit-msg-linter": "^4.4.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.3"
   }
